--- a/mananresume.html
+++ b/mananresume.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <button onclick="window.print()">Print this page</button>
     <center>
         <div style="background-color:rgb(0, 0, 0);color:white; padding:10px">
             <u style="font-size: 35px;">MY RESUME</u>
