--- a/mananresume.html
+++ b/mananresume.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+  <img src="" alt="" width="150" height="100">
     <button onclick="window.print()">Print this page</button>
     <center>
         <div style="background-color:rgb(0, 0, 0);color:white; padding:10px">
@@ -94,3 +95,4 @@
     
 </body>
 </html>
+
